QtBeef/src/Qt/qmetaobject.bf

extension CQt
{
	[LinkName("QMetaMethod_new")]
	public static extern QMetaMethod_Ptr QMetaMethod_new(void** other);
	[LinkName("QMetaMethod_new2")]
	public static extern QMetaMethod_Ptr QMetaMethod_new2(void** other);
	[LinkName("QMetaMethod_new3")]
	public static extern QMetaMethod_Ptr QMetaMethod_new3();
	[LinkName("QMetaMethod_new4")]
	public static extern QMetaMethod_Ptr QMetaMethod_new4(void** param1);
	[LinkName("QMetaMethod_Delete")]
	public static extern void QMetaMethod_Delete(QMetaMethod_Ptr self);
	[LinkName("QMetaMethod_MethodSignature")]
	public static extern void* QMetaMethod_MethodSignature(void* self);
	[LinkName("QMetaMethod_Name")]
	public static extern void* QMetaMethod_Name(void* self);
	[LinkName("QMetaMethod_TypeName")]
	public static extern c_char* QMetaMethod_TypeName(void* self);
	[LinkName("QMetaMethod_ReturnType")]
	public static extern c_int QMetaMethod_ReturnType(void* self);
	[LinkName("QMetaMethod_ReturnMetaType")]
	public static extern void* QMetaMethod_ReturnMetaType(void* self);
	[LinkName("QMetaMethod_ParameterCount")]
	public static extern c_int QMetaMethod_ParameterCount(void* self);
	[LinkName("QMetaMethod_ParameterType")]
	public static extern c_int QMetaMethod_ParameterType(void* self, c_int index);
	[LinkName("QMetaMethod_ParameterMetaType")]
	public static extern void* QMetaMethod_ParameterMetaType(void* self, c_int index);
	[LinkName("QMetaMethod_GetParameterTypes")]
	public static extern void QMetaMethod_GetParameterTypes(void* self, c_int* types);
	[LinkName("QMetaMethod_ParameterTypes")]
	public static extern void* QMetaMethod_ParameterTypes(void* self);
	[LinkName("QMetaMethod_ParameterTypeName")]
	public static extern void* QMetaMethod_ParameterTypeName(void* self, c_int index);
	[LinkName("QMetaMethod_ParameterNames")]
	public static extern void* QMetaMethod_ParameterNames(void* self);
	[LinkName("QMetaMethod_Tag")]
	public static extern c_char* QMetaMethod_Tag(void* self);
	[LinkName("QMetaMethod_Access")]
	public static extern QMetaMethod_Access QMetaMethod_Access(void* self);
	[LinkName("QMetaMethod_MethodType")]
	public static extern QMetaMethod_MethodType QMetaMethod_MethodType(void* self);
	[LinkName("QMetaMethod_Attributes")]
	public static extern c_int QMetaMethod_Attributes(void* self);
	[LinkName("QMetaMethod_MethodIndex")]
	public static extern c_int QMetaMethod_MethodIndex(void* self);
	[LinkName("QMetaMethod_RelativeMethodIndex")]
	public static extern c_int QMetaMethod_RelativeMethodIndex(void* self);
	[LinkName("QMetaMethod_Revision")]
	public static extern c_int QMetaMethod_Revision(void* self);
	[LinkName("QMetaMethod_IsConst")]
	public static extern bool QMetaMethod_IsConst(void* self);
	[LinkName("QMetaMethod_EnclosingMetaObject")]
	public static extern void** QMetaMethod_EnclosingMetaObject(void* self);
	[LinkName("QMetaMethod_Invoke")]
	public static extern bool QMetaMethod_Invoke(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue);
	[LinkName("QMetaMethod_Invoke2")]
	public static extern bool QMetaMethod_Invoke2(void* self, void** object, void* returnValue);
	[LinkName("QMetaMethod_Invoke3")]
	public static extern bool QMetaMethod_Invoke3(void* self, void** object, Qt_ConnectionType connectionType);
	[LinkName("QMetaMethod_Invoke4")]
	public static extern bool QMetaMethod_Invoke4(void* self, void** object);
	[LinkName("QMetaMethod_InvokeOnGadget")]
	public static extern bool QMetaMethod_InvokeOnGadget(void* self, void* gadget, void* returnValue);
	[LinkName("QMetaMethod_InvokeOnGadget2")]
	public static extern bool QMetaMethod_InvokeOnGadget2(void* self, void* gadget);
	[LinkName("QMetaMethod_IsValid")]
	public static extern bool QMetaMethod_IsValid(void* self);
	[LinkName("QMetaMethod_Invoke42")]
	public static extern bool QMetaMethod_Invoke42(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0);
	[LinkName("QMetaMethod_Invoke5")]
	public static extern bool QMetaMethod_Invoke5(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0, void* val1);
	[LinkName("QMetaMethod_Invoke6")]
	public static extern bool QMetaMethod_Invoke6(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0, void* val1, void* val2);
	[LinkName("QMetaMethod_Invoke7")]
	public static extern bool QMetaMethod_Invoke7(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0, void* val1, void* val2, void* val3);
	[LinkName("QMetaMethod_Invoke8")]
	public static extern bool QMetaMethod_Invoke8(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4);
	[LinkName("QMetaMethod_Invoke9")]
	public static extern bool QMetaMethod_Invoke9(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5);
	[LinkName("QMetaMethod_Invoke10")]
	public static extern bool QMetaMethod_Invoke10(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6);
	[LinkName("QMetaMethod_Invoke11")]
	public static extern bool QMetaMethod_Invoke11(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7);
	[LinkName("QMetaMethod_Invoke12")]
	public static extern bool QMetaMethod_Invoke12(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7, void* val8);
	[LinkName("QMetaMethod_Invoke13")]
	public static extern bool QMetaMethod_Invoke13(void* self, void** object, Qt_ConnectionType connectionType, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7, void* val8, void* val9);
	[LinkName("QMetaMethod_Invoke32")]
	public static extern bool QMetaMethod_Invoke32(void* self, void** object, void* returnValue, void* val0);
	[LinkName("QMetaMethod_Invoke43")]
	public static extern bool QMetaMethod_Invoke43(void* self, void** object, void* returnValue, void* val0, void* val1);
	[LinkName("QMetaMethod_Invoke52")]
	public static extern bool QMetaMethod_Invoke52(void* self, void** object, void* returnValue, void* val0, void* val1, void* val2);
	[LinkName("QMetaMethod_Invoke62")]
	public static extern bool QMetaMethod_Invoke62(void* self, void** object, void* returnValue, void* val0, void* val1, void* val2, void* val3);
	[LinkName("QMetaMethod_Invoke72")]
	public static extern bool QMetaMethod_Invoke72(void* self, void** object, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4);
	[LinkName("QMetaMethod_Invoke82")]
	public static extern bool QMetaMethod_Invoke82(void* self, void** object, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5);
	[LinkName("QMetaMethod_Invoke92")]
	public static extern bool QMetaMethod_Invoke92(void* self, void** object, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6);
	[LinkName("QMetaMethod_Invoke102")]
	public static extern bool QMetaMethod_Invoke102(void* self, void** object, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7);
	[LinkName("QMetaMethod_Invoke112")]
	public static extern bool QMetaMethod_Invoke112(void* self, void** object, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7, void* val8);
	[LinkName("QMetaMethod_Invoke122")]
	public static extern bool QMetaMethod_Invoke122(void* self, void** object, void* returnValue, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7, void* val8, void* val9);
	[LinkName("QMetaMethod_Invoke33")]
	public static extern bool QMetaMethod_Invoke33(void* self, void** object, Qt_ConnectionType connectionType, void* val0);
	[LinkName("QMetaMethod_Invoke44")]
	public static extern bool QMetaMethod_Invoke44(void* self, void** object, Qt_ConnectionType connectionType, void* val0, void* val1);
	[LinkName("QMetaMethod_Invoke53")]
	public static extern bool QMetaMethod_Invoke53(void* self, void** object, Qt_ConnectionType connectionType, void* val0, void* val1, void* val2);
	[LinkName("QMetaMethod_Invoke63")]
	public static extern bool QMetaMethod_Invoke63(void* self, void** object, Qt_ConnectionType connectionType, void* val0, void* val1, void* val2, void* val3);
	[LinkName("QMetaMethod_Invoke73")]
	public static extern bool QMetaMethod_Invoke73(void* self, void** object, Qt_ConnectionType connectionType, void* val0, void* val1, void* val2, void* val3, void* val4);
	[LinkName("QMetaMethod_Invoke83")]
	public static extern bool QMetaMethod_Invoke83(void* self, void** object, Qt_ConnectionType connectionType, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5);
	[LinkName("QMetaMethod_Invoke93")]
	public static extern bool QMetaMethod_Invoke93(void* self, void** object, Qt_ConnectionType connectionType, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6);
	[LinkName("QMetaMethod_Invoke103")]
	public static extern bool QMetaMethod_Invoke103(void* self, void** object, Qt_ConnectionType connectionType, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7);
	[LinkName("QMetaMethod_Invoke113")]
	public static extern bool QMetaMethod_Invoke113(void* self, void** object, Qt_ConnectionType connectionType, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7, void* val8);
	[LinkName("QMetaMethod_Invoke123")]
	public static extern bool QMetaMethod_Invoke123(void* self, void** object, Qt_ConnectionType connectionType, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7, void* val8, void* val9);
	[LinkName("QMetaMethod_Invoke22")]
	public static extern bool QMetaMethod_Invoke22(void* self, void** object, void* val0);
	[LinkName("QMetaMethod_Invoke34")]
	public static extern bool QMetaMethod_Invoke34(void* self, void** object, void* val0, void* val1);
	[LinkName("QMetaMethod_Invoke45")]
	public static extern bool QMetaMethod_Invoke45(void* self, void** object, void* val0, void* val1, void* val2);
	[LinkName("QMetaMethod_Invoke54")]
	public static extern bool QMetaMethod_Invoke54(void* self, void** object, void* val0, void* val1, void* val2, void* val3);
	[LinkName("QMetaMethod_Invoke64")]
	public static extern bool QMetaMethod_Invoke64(void* self, void** object, void* val0, void* val1, void* val2, void* val3, void* val4);
	[LinkName("QMetaMethod_Invoke74")]
	public static extern bool QMetaMethod_Invoke74(void* self, void** object, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5);
	[LinkName("QMetaMethod_Invoke84")]
	public static extern bool QMetaMethod_Invoke84(void* self, void** object, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6);
	[LinkName("QMetaMethod_Invoke94")]
	public static extern bool QMetaMethod_Invoke94(void* self, void** object, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7);
	[LinkName("QMetaMethod_Invoke104")]
	public static extern bool QMetaMethod_Invoke104(void* self, void** object, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7, void* val8);
	[LinkName("QMetaMethod_Invoke114")]
	public static extern bool QMetaMethod_Invoke114(void* self, void** object, void* val0, void* val1, void* val2, void* val3, void* val4, void* val5, void* val6, void* val7, void* val8, void* val9);
